--- a/my-portfolio/src/index.css
+++ b/my-portfolio/src/index.css
@@ -1,9 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&display=swap');
-html,body,#root,.app,content{
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500;600&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,500&display=swap');html,body,#root,.app,content{
     height: 100%;
     width: 100%;
-    font-family: 'Oswald';
+    font-family: 'Roboto ';
 }
 .app{
     display: flex;
